llvm/test/tools/llvm-ifs/conflict-type.ifs
# RUN: not llvm-ifs -action write-ifs -o - %s %S/func.ifs 2>&1 | \
# RUN: FileCheck %s --check-prefixes=CHECK-IFS

# Here we are testing to see if two symbols with identical names will fail to
# merge in conflict due to mismatched types.
# CHECK-IFS: error: Interface Stub: Type Mismatch for a.
# CHECK-IFS-NEXT: Filename:
# CHECK-IFS-NEXT: Type Values: Object Func

--- !experimental-ifs-v2
IfsVersion: 2.0
Triple: x86_64-unknown-linux-gnu
ObjectFileFormat: ELF
Symbols:
  - { Name: a, Type: Object, Size: 1 }
...
